<resources>
    <string name="app_name">MVVM</string>
    <string name="username">UserName</string>
    <string name="age">Age</string>
    <string name="sir_name">Sir Name</string>
    <string name="occupation">Occupation</string>
    <string name="id">ID</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="salary">Salary</string>

    <!-- Strings related to login -->

</resources>
